k8s/domains/auth/workloads/api/infra/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: api
spec:
  selector:
    matchLabels:
      app: api
  replicas: 1
  template:
    metadata:
      labels:
        app: api
    spec:
      terminationGracePeriodSeconds: 15
      automountServiceAccountToken: false

      containers:
        - name: api
          image: ghcr.io/mstaicu/auth-api
          volumeMounts:
            - name: jwt
              mountPath: /app/keys
              readOnly: true

          readinessProbe:
            httpGet:
              path: /readyz
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 2

          livenessProbe:
            httpGet:
              path: /livez
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 1
            failureThreshold: 2

      volumes:
        - name: jwt
          secret:
            secretName: api-jwt
