k8s/domains/auth/workloads/api/infra/base/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: api
spec:
  selector:
    app: api
  ports:
    - name: http
      port: 3000
      targetPort: 3000
