k8s/domains/auth/workloads/api/infra/base/internal-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute

metadata:
  name: api-internal
spec:
  entryPoints:
    - http

  routes:
    - kind: Rule
      match: >-
        PathPrefix(`/v1/passkeys`) ||
        PathPrefix(`/v1/session`)
      services:
        - name: api
          port: 3000
