k8s/domains/auth/workloads/api/infra/base/internal-jwks-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute

metadata:
  name: api-internal-jwks
spec:
  entryPoints:
    - http

  routes:
    - kind: Rule
      match: Path(`/.well-known/jwks.json`)
      services:
        - name: api
          port: 3000
